--- a/02-変数.md
+++ b/02-変数.md
@@ -50,11 +50,11 @@ x = 50; // 変数xに値50を代入する
 ### 変数を使ったプログラムの実行
 プログラムの実行過程と変数を見ていきましょう。
 
-#. 変数の宣言
+1. 変数の宣言
 <br>![変数の宣言](img/chapter02/table_model_x_01.gif)
-#. 変数へ値を代入する
+1. 変数へ値を代入する
 <br>![変数へ値を代入する](img/chapter02/table_model_x_02.gif)
-#. 変数を評価して値にする
+1. 変数を評価して値にする
 <br>![変数を評価して値にする](img/chapter02/table_model_x_03.gif)
 
 ### 複数の変数と変数名
@@ -96,15 +96,15 @@ rightAngle = 90;// 直角を90度に設定する
 #### プログラムの実行過程
 プログラムの実行過程を追ってみましょう。
 
-#. 変数の宣言
+1. 変数の宣言
 <br>![](img/chapter02/table_model_name_01.gif)
-#. 変数の宣言
+1. 変数の宣言
 <br>![](img/chapter02/table_model_name_02.gif)
-#. 変数への値の代入
+1. 変数への値の代入
 <br>![](img/chapter02/table_model_name_03.gif)
-#. 変数への値の代入
+1. 変数への値の代入
 <br>![](img/chapter02/table_model_name_04.gif)
-#. 変数を評価して値にする
+1. 変数を評価して値にする
 ![](img/chapter02/table_model_name_05.gif)
 
 ## コンピュータに計算をさせる
