7章まで，図を整理

--- a/01-イントロ.md
+++ b/01-イントロ.md
@@ -2,11 +2,11 @@
 
 ## 学習目標
 
-* タートルの基本的な命令を使いこなし、タートルで図形が描けるようになる
+* タートルの基本的な命令を使いこなし，タートルで図形が描けるようになる
 
 ## 最初のタートルプログラム
 
-最初の例題として､「家を描くサンプルプログラム」を解説します。
+最初の例題として､「家を描くサンプルプログラム」を解説します．
 
 家を書くサンプルプログラム
 ```{#lst:1-1 .javascript .numberLines caption="家を書くサンプルプログラム"}
@@ -37,9 +37,9 @@ t.fd(50);
 `var t = createTurtle();`
 （説明を加える）
 
-t.rt(30)やt.fd(60)がタートルに指示する命令です。
-書かれた命令は、 必ず上から順番に実行されます。
-以下にタートルに指示できる命令の一覧を示します。
+t.rt(30)やt.fd(60)がタートルに指示する命令です．
+書かれた命令は， 必ず上から順番に実行されます．
+以下にタートルに指示できる命令の一覧を示します．
 
 `rt([角度の指定])`
 : タートルを指定した角度だけ右に回す．
@@ -54,10 +54,10 @@ t.rt(30)やt.fd(60)がタートルに指示する命令です。
 : タートルを指定した長さだけ後ろに進める．
 
 `up()`
-: タートルがペンを上げる(軌跡がかかれなくなる)。
+: タートルがペンを上げる(軌跡がかかれなくなる)．
 
 `down()`
-: タートルがペンを下げる(軌跡がかかれるようになる)。
+: タートルがペンを下げる(軌跡がかかれるようになる)．
 
 <!-- color([色の指定])
 ペンの色を変える (1) -->
@@ -66,7 +66,7 @@ t.rt(30)やt.fd(60)がタートルに指示する命令です。
 
 ### コメント
 
-コメントはプログラム（命令）としては考慮されず、読み飛ばされます。 しかし、人間が読めないとメンテナンスにこまるためにコメントをつけておきます。ファイルの先頭には、プログラムのタイトル、名前や日付を忘れずに。
+コメントはプログラム（命令）としては考慮されず，読み飛ばされます． しかし，人間が読めないとメンテナンスにこまるためにコメントをつけておきます．ファイルの先頭には，プログラムのタイトル，名前や日付を忘れずに．
 
 範囲指定コメント
 : `/*`から`*/`までコメントになります
@@ -77,50 +77,50 @@ t.rt(30)やt.fd(60)がタートルに指示する命令です。
 
 ## プログラムミスと対処
 ### コンパイルエラー
-プログラムの書きかたを間違えると、コンパイルしたときにエラーになります。
+プログラムの書きかたを間違えると，コンパイルしたときにエラーになります．
 
-<!-- 例えば、コマンドの区切りでセミコロンを忘れると、次のようなエラーがでます。
+<!-- 例えば，コマンドの区切りでセミコロンを忘れると，次のようなエラーがでます．
 
 図 2.4.1.1 コンパイルエラー
->javac House.java House.java:13: ';' がありません。 rt(120)
+>javac House.java House.java:13: ';' がありません． rt(120)
 ^ エラー 1 個 > -->
 				
-コンパイルエラーがでたら、実行することはできないので、ソースを直して、再コンパイルするしかありません。 どうしても原因が分からない時は、ＴＡなどに相談してください。
+コンパイルエラーがでたら，実行することはできないので，ソースを直して，再コンパイルするしかありません． どうしても原因が分からない時は，ＴＡなどに相談してください．
 
 ### バグ
-コンパイルが正常に通っても、プログラムが間違っていて、意図した通りに動作しないことをバグといいます。 コンピュータは、必ず 命令した通りに動作します。
+コンパイルが正常に通っても，プログラムが間違っていて，意図した通りに動作しないことをバグといいます． コンピュータは，必ず 命令した通りに動作します．
 
-バグがあったら、修正しましょう。バグを修正することをデバッグといいます。
+バグがあったら，修正しましょう．バグを修正することをデバッグといいます．
 
-プロでも、最初から意図したプログラムを書くのは難しいものです。 プログラム上達の早道は、一発で動かそうとせずに、 早くバグを見つけて、修正できるようになるようになるように心がけることです。
+プロでも，最初から意図したプログラムを書くのは難しいものです． プログラム上達の早道は，一発で動かそうとせずに， 早くバグを見つけて，修正できるようになるようになるように心がけることです．
 
 ## 練習問題
 ### 正五角形描こう
-進める（fd）命令や、回す（rt）命令を使って、正五角形を描くプログラムを作りましょう。
+進める（fd）命令や，回す（rt）命令を使って，正五角形を描くプログラムを作りましょう．
 
 ![正五角形](img/chapter01/pentagon.png)
 ファイル名は「pentagon.js」とすること．
 
 ### 星を描こう
-進める（fd）命令や、回す（rt）命令を使って、星を描くプログラムを作りましょう。
+進める（fd）命令や，回す（rt）命令を使って，星を描くプログラムを作りましょう．
 
 ![星](img/chapter01/star.png)
 ファイル名は「star.js」とすること．
 
 ### こんぺいとうを描こう
-進める（fd）命令や、回す（rt）命令を使って、こんぺいとうを描くプログラムを作りましょう。
+進める（fd）命令や，回す（rt）命令を使って，こんぺいとうを描くプログラムを作りましょう．
 
 ![こんぺいとう](img/chapter01/confetti.png)
 ファイル名は「confetti.js」とすること．
 
 ### トライフォースを描こう
-進める（fd）命令や、回す（rt）命令を使って、トライフォースを描くプログラムを作りましょう。
+進める（fd）命令や，回す（rt）命令を使って，トライフォースを描くプログラムを作りましょう．
 
 ![トライフォース](img/chapter01/triforce.png)
 ファイル名は「triforce.js」とすること．
 
 ### 好きな図形を描こう
-タートルを使って、好きな絵を描くプログラムを作りましょう。
+タートルを使って，好きな絵を描くプログラムを作りましょう．
 
 ファイル名は「myfavorite.js」とすること．
 
