７章まで粗く仕上げ

--- a/05-入れ子.md
+++ b/05-入れ子.md
@@ -10,7 +10,25 @@
 ### 窓を描く（４つの四角形を描く）プログラム
 次のプログラムを見てみましょう．
 
-リスト 6.2.1.1 FourSquares.java
+<!-- リスト 6.2.1.1 FourSquares.java -->
+```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+
+{ // 窓を描く
+  var j = 1;
+  while (j <= 4) {
+  { // 四角形を描く
+    var i = 1;
+    while (i <= 4) {
+      t.fd(50);
+      t.rt(90);
+      i++;
+    }
+  }
+  t.rt(90);
+  j++;
+}
+```
 
 ![窓を描くプログラム](img/chapter05/foursquares.jpg)
 
@@ -44,19 +62,79 @@
 ## 入れ子と並列の違いの考察：花を描くプログラム
 入れ子の応用として，花を描くプログラムを考えてみましょう．
 
-図 6.3.1 花を書くプログラム
+![花を書くプログラム](img/chapter05/flower.gif)
 
 ### 花びらを描く
 花を描くには，まず花びらをかいて，それを繰り返す必要があります．
 
 ![花びらを書くプログラム](img/chapter05/petal.gif)
 
-リスト 6.3.1.1 Petal.java
+<!-- リスト 6.3.1.1 Petal.java -->
+```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+
+{// 花びらを描く
+  {// 円弧を描く
+    var i = 1;
+    while (i <= 120) {
+      t.rt(1);
+      t.fd(1);
+      i++;
+    }
+  }
+  
+  {// 次の円弧の角度へ
+    t.rt(60);
+  }
+  
+  {// 円弧を描く
+    var i = 1;
+    while (i <= 120) {
+      t.rt(1);
+      t.fd(1);
+      i++;
+    }
+  }
+}
+```
 
 6.3.2 花を描く
 花びらを描くには繰り返しが必要で，花を描くにはさらにそれを繰り返す必要があります． 以下のように，繰り返しの入れ子を使います．
 
-リスト 6.3.2.1 Flower.java
+<!-- リスト 6.3.2.1 Flower.java -->
+```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+
+{// 花をかく（6枚の花びらを書く）
+  var j = 1;
+  while (j <= 6) {
+    {// 花びらを描く
+      {// 円弧を描く
+        var i = 1;
+        while (i <= 120) {
+          t.rt(1);
+          t.fd(1);
+          i++;
+        }
+      }
+    
+      {// 次の円弧の角度へ
+        t.rt(60);
+      }
+    
+      {// 円弧を描く
+        var i = 1;
+        while (i <= 120) {
+          t.rt(1);
+          t.fd(1);
+          i++;
+        }
+      }
+    }
+    j++;
+  }
+}
+```
  
 ポイントは，花びらを書くループの外側にそれを6回繰り返すループをつくる （つまりループを入れ子にする）ことです． 「繰り返しを繰り返す」ためには，繰り返す繰り返しの外側に繰り返しループ を書く必要がありました．構造は以下のようになります．
 
@@ -65,7 +143,10 @@
 ### 花を描く（間違い）
 以下に，よくある間違いの例を示します．
 
-リスト 6.3.3.1 BadFlower.java 
+<!-- リスト 6.3.3.1 BadFlower.java -->
+```{#lst:4-1 .javascript .numberLines caption="House"}
+
+```
 
 これがうまくいかない理由が説明できるでしょうか？ 以下に，このプログラムの構造を示しますので， うまくいく方と比較してみましょう．
 
@@ -77,7 +158,25 @@
 ### 目玉を描くプログラム
 次のプログラムを見てみましょう．
 
-リスト 6.4.1.1 MultiCircle.java 
+<!-- リスト 6.4.1.1 MultiCircle.java -->
+```{#lst:4-1 .javascript .numberLines caption="MultiCircle"}
+var t = createTurtle();
+
+{ // （円を）10個描く
+  var j = 1;
+  while (j <= 10) {
+    { // 円を描く
+      var i = 1;
+      while (i <= 360) {
+        t.fd(1);
+        t.rt(j);
+        i = i + j;
+      }
+    }
+    j = j + 1;
+  }
+}
+```
 
 ![たくさんの円を書くプログラム](img/chapter05/multicircle.gif)
 
@@ -86,9 +185,51 @@
 ### 奇数と偶数を判定する
 剰余演算子(%)を使うと，割り算のあまりを求めることができます． これを使うと，例えば奇数と偶数を判定することができます．
 
-リスト 6.4.2.1 SquareAndTriangle.java
+<!-- リスト 6.4.2.1 SquareAndTriangle.java -->
+```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+var length = 50;// １辺の長さ
 
-![三角形と四角形を交互に書くプログラム](img/chapter05/square_and_griangle.gif)
+{// 図形を描く　（8回繰り返す）
+  var i = 1;
+  while (i <= 8) {
+
+    if (i % 2 == 0) {// 偶数なら
+      {// 四角形を書く
+        var j = 1;
+        while (j <= 4) {
+          t.fd(length);
+          t.lt(90);
+
+          j++;// jを1増やす([j = j + 1] の省略形)
+        }
+      }
+    } else {// 奇数なら
+      {// 三角形を書く
+        var j = 1;
+        while (j <= 3) {
+          t.fd(length);
+          t.lt(120);
+
+          j++;// jを1増やす([j = j + 1] の省略形)
+        }
+      }
+    }
+
+    {// 次の図形を書く位置に移動する
+      t.up();
+      t.rt(135);
+      t.fd(length);
+      t.rt(180);
+      t.down();
+    }
+  
+    i++;// jを1増やす([i = i + 1] の省略形)
+  }
+}
+```
+
+![三角形と四角形を交互に書くプログラム](img/chapter05/square_and_triangle.gif)
 
 このプログラムでは，剰余演算子と，先ほど説明した繰り返しの変数を利用して， 繰り返した数が偶数なら四角，奇数なら三角を描くようにプログラムされています．
 
@@ -139,7 +280,7 @@
 
 ### キーボードを描くプログラムを作ろう
 
-![キーボードを描くプログラム](img/chapter05/keyboard.pngs)
+![キーボードを描くプログラム](img/chapter05/q_keyboard.png)
 
 ファイル名は「keyboard.js」とすること．
 
