--- a/07-再帰.md
+++ b/07-再帰.md
@@ -31,17 +31,35 @@ n! = n * (n-1)!
 
 この式を応用し，再帰を使うことで，階乗を求めるプログラムを次のように書ける．
 
-リスト 14.2.2.1 Factorial.js
+<!-- リスト 14.2.2.1 Factorial.js -->
+```{#lst:7-1 .javascript .numberLines caption="House"}
+println("factorial(1) = " + factorial(1));
+println("factorial(2) = " + factorial(2));
+println("factorial(3) = " + factorial(3));
+println("factorial(4) = " + factorial(4));
+println("factorial(5) = " + factorial(5));
+
+function factorial(n) {
+    var result;
+    if (n == 1) {
+        result = 1;
+    } else {
+        result = n * factorial(n - 1);
+    }
+    return result;
+}
+```
  
 ###再帰の終点{.unnumbered}
 上記の例ではfactorial()関数からfactorial()関数を呼んでいるので，再帰の終点を作ってやらないと呼出しが無限に続いて，プログラムが止まらなくなる． （実際には，呼び出すごとに関数がスタックと呼ばれるメモリに読み込まれるので，そのメモリがいっぱいになってStackOverFlowErrorというエラーを出して止まる．
 
 したがって，どこかで止めるプログラムを書かなければならない．上記の例では，
 
-						
+```						
 if (n == 1) {
 	result = 1;
 }
+```
 					
 の部分がそれにあたる．
 
@@ -49,8 +67,37 @@ if (n == 1) {
 
 このコピーの様子を視覚化して理解するために，呼出し過程を図示してみよう．
 
-リスト 14.2.2.2 FactorialWithPrint.js
+<!-- リスト 14.2.2.2 FactorialWithPrint.js -->
+```{#lst:7-1 .javascript .numberLines caption="House"}
+print("factorial(5, 0) = " + factorial(5, 0));
 
+function factorial(n, indentCount) {
+    printStart(n, indentCount);
+    var result;
+    if (n == 1) {
+        result = 1;
+    } else {
+        result = n * factorial(n - 1, indentCount + 1);
+    }
+    printEnd(result, indentCount);
+    return result;
+}
+
+function printStart(length, indentCount) {
+    makeIndent(indentCount);
+    println("factorial(" + length + ", " + indentCount + ")");
+}
+
+function printEnd(result, indentCount) {
+    makeIndent(indentCount);
+    println("// return " + result);
+}
+
+function makeIndent(indentCount) {
+    for (var i = 0; i < indentCount; i++) {
+        print("\t");
+    }
+}
 ```					
 factorial(5, 0)
 	factorial(4, 1)
@@ -88,11 +135,65 @@ fib(6) = fib(5) + fib(4) = 13
 ```
 フィボナッチ数列も再帰の例でよく出てくる例で，再帰を使うことでプログラムを次のように書ける．
 
-リスト 14.2.3.1 Fibonacci.js
+<!-- リスト 14.2.3.1 Fibonacci.js -->
+```{#lst:7-1 .javascript .numberLines caption="House"}
+println("fib(1) = " + fib(1));
+println("fib(2) = " + fib(2));
+println("fib(3) = " + fib(3));
+println("fib(4) = " + fib(4));
+println("fib(5) = " + fib(5));
+println("fib(6) = " + fib(6));
+println("fib(7) = " + fib(7));
+
+function fib(n) {
+    var value;
+    if (n == 1) {
+        value = 1;
+    } else if (n == 2) {
+        value = 2;
+    } else {
+        value = fib(n - 1) + fib(n - 2);
+    }
+    return value;
+}
+```
 
 これも呼出し過程を図示してみよう
 
-リスト 14.2.3.2 FibonacciWithPrint.js
+<!-- リスト 14.2.3.2 FibonacciWithPrint.js -->
+```{#lst:7-1 .javascript .numberLines caption="House"}
+print("fib(5, 0) = " + fib(5, 0));
+
+function fib(n, indentCount) {
+    printStart(n, indentCount);
+    var value;
+    if (n == 1) {
+        value = 1;
+    } else if (n == 2) {
+        value = 2;
+    } else {
+        value = fib(n - 1, indentCount + 1) + fib(n - 2, indentCount + 1);
+    }
+    printEnd(value, indentCount);
+    return value;
+}
+
+function printStart(length, indentCount) {
+    makeIndent(indentCount);
+    println("fib(" + length + ", " + indentCount + ")");
+}
+
+function printEnd(result, indentCount) {
+    makeIndent(indentCount);
+    println("// return " + result);
+}
+
+function makeIndent(indentCount) {
+    for (i = 0; i < indentCount; i++) {
+        print("\t");
+    }
+}
+```
 
 ```			
 fib(5, 0)
@@ -129,19 +230,77 @@ fib(5, 0)
 
 自己相似図形と再帰プログラムには深い関係があり，再帰プログラムを使ってフラクタル図形を書くことができる．
 
-![tree](img/chapter06/maketree.png)
-
 このような図形を書くには，まず繰り返される基本的な図形と変換ルールを考える．この場合は以下のように「Y」に小さな「Y」を足していく プログラムを考える．
 
-図 14.3.2 maketree
+![tree](img/chapter07/maketree.png)
 
 まず，「Y」を描くプログラムを書く．ここで一回テストしてみることが重要である． （いきなり再帰のプログラム書こうとした先輩は，ことごとく失敗しています！）
 
 リスト 14.3.1 DrawY.js
+```{#lst:7-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+canvasSize(500,500);
+t.warp(250,400);
+
+drawY(50);
+
+function drawY(length) {
+  
+  t.fd(length);// 幹を描く
+  
+  // 左の枝を描く
+  t.lt(30);
+  t.fd(length / 2);
+  t.bk(length / 2);
+  t.rt(30);
+  
+  // 右の枝を描く
+  t.rt(30);
+  t.fd(length / 2);
+  t.bk(length / 2);
+  t.lt(30);
+  
+  t.bk(length);// 幹の根元に戻る
+  
+}
+```
 
 次に，大きな「Y」の先に小さな「Y」を書くように，再帰呼び出しを行う．再帰の終点も忘れずに！
 
-リスト 14.3.2 DrawTree.js
+<!-- リスト 14.3.2 DrawTree.js -->
+```{#lst:7-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+canvasSize(500,500);
+t.warp(250,400);
+
+drawY(50);
+
+function drawY(length) {
+  
+  if (length < 5) {// 再帰の終点
+    return;
+  }
+  
+  t.fd(length);// 幹を描く
+  
+  // 左の枝を描く
+  t.lt(30);
+  t.fd(length / 2);
+  drawY(length / 2);
+  t.bk(length / 2);
+  t.rt(30);
+  
+  // 右の枝を描く
+  t.rt(30);
+  t.fd(length / 2);
+  drawY(length / 2);
+  t.bk(length / 2);
+  t.lt(30);
+  
+  t.bk(length);// 幹の根元に戻る
+  
+}
+```
 
 <!-- このプログラムの関数の呼出し過程を表示すると，次のようになる．
 
@@ -225,7 +384,7 @@ drawY(50, 0)
 ファイル名は「naturaltree.js」とすること．
 
 <!-- 図 14.4.1.1 cooltree -->
-![NaturalTree](img/chapter06/q_cooltree.jpg)
+![NaturalTree](img/chapter07/q_cooltree.jpg)
 
 ### トーナメント表を描いてみよう
 関数の再帰呼出しを応用して，下記の図を書いてみましょう．
@@ -237,21 +396,21 @@ drawY(50, 0)
 ### ギャスケットを描いてみよう
 関数の再帰呼出しを応用して，下記の図を書いてみましょう．
 
-![gasket](img/chapter06/q_gasket.jpg)
+![gasket](img/chapter07/q_gasket.jpg)
 
 ファイル名は「gasket.js」とすること．
 
 ### スーパースターを描いてみよう
 関数の再帰呼出しを応用して，下記の図を書いてみましょう．
 
-![superstar](img/chapter06/q.suparstar.jpg)
+![superstar](img/chapter07/q.superstar.jpg)
 
 ファイル名は「superstar.js」とすること．
 
 ### コッホ曲線を描いてみよう
 関数の再帰呼出しを応用して，下記の図を書いてみましょう．
 
-![koch](img/chapter06/q_koch.jpg)
+![koch](img/chapter07/q_koch.png)
 
 ファイル名は「koch.js」とすること．
 
