--- a/04-繰り返し.md
+++ b/04-繰り返し.md
@@ -12,14 +12,60 @@
 ### 何を繰り返すのか
 何回も出てきた，家のプログラムを見てみましょう．
 
-リスト 5.2.1.1 House.java
+```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+{// 屋根を書く
+	t.rt(30);
+	t.fd(50);
+	t.rt(120);
+	t.fd(50);
+	t.rt(120);
+	t.fd(50);
+	t.rt(120);
+	t.lt(30);
+}
+
+{// 本体を書く
+	t.rt(90);
+	t.fd(50);
+	t.rt(90);
+	t.fd(50);
+	t.rt(90);
+	t.fd(50);
+	t.rt(90);
+	t.fd(50);
+}
+```
 
 このプログラム，何度も同じことを書いている個所が2箇所ありますね．どこが同じか考えてみましょう．
 
 ### 繰り返しを使ったプログラム
 繰り返しを使って，すっきりとしたプログラムにしてみましょう．
 
-リスト 5.2.2.1 WhileHouse.java
+<!-- リスト 5.2.2.1 WhileHouse.java -->
+```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
+
+{// 屋根を書く
+  t.rt(30);
+  var i = 1;
+  while (i <= 3) {
+    t.fd(50);
+    t.rt(120);
+    i = i + 1;
+  }
+  t.lt(30);// 上向きに戻す
+}
+
+{// 本体を書く
+  var i = 1;
+  while (i <= 4) {
+    t.rt(90);
+    t.fd(50);
+    i = i + 1;
+  }
+}
+```
 
 今回登場した"繰り返し"を使うと，プログラムを繰り返すことができます．
 
@@ -68,9 +114,20 @@ while( [条件式] ) {
 繰り返しを使うと，円を簡単に書くことができます．次のプログラムを実行してみましょう．
 
 ### 円を書きつづけるプログラム
-リスト 5.3.1.1 Circle.java
+<!-- リスト 5.3.1.1 Circle.java -->
+```{#lst:4-1 .javascript .numberLines caption="Circle"}
+var t = createTurtle();
+
+{// 円を書く
+	while (true) {
+		t.fd(1);
+		t.rt(1);
+	}
+}
+```
 
 ## for文
+（書き加える）
 このプログラムでは，繰り返しをfor文を使って書いています．for文を使うと，while文よりも短く書くことができます．
 
 for文の()の中の命令は，それぞれwhile文と以下のように対応しています．
