javaバージョンになっている記述を大まかに修正

--- a/text/01-イントロ.md
+++ b/text/01-イントロ.md
@@ -34,9 +34,18 @@ t.fd(50);
 
 ## タートルの命令の解説
 
-`var t = createTurtle();`
-（説明を加える）
+### タートルの生成
+コンピュータ実習の授業では，しばらくタートルグラフィックスライブラリを使って演習を行っていきます．タートル（亀）を動かすことでアルゴリズムの基礎とJavascriptを使ったプログラムの基礎を学んでいきましょう．
 
+タートルグラフィックスライブラリを使うための最初の命令が
+`var t = createTurtle();`
+という行です．
+右辺の`createTurtle()`関数を呼び出してタートルを一つ作成し，
+`var t`で，tという名前の変数を一つ作成し，作成したタートルへの参照を代入します．
+
+と説明しても難しいでしょうから，まずは，これは"おまじない"だと思って，タートルグラフィックスを扱うプログラムでは最初に記述しておいておいてください．
+
+### タートルの命令
 t.rt(30)やt.fd(60)がタートルに指示する命令です．
 書かれた命令は， 必ず上から順番に実行されます．
 以下にタートルに指示できる命令の一覧を示します．
@@ -59,14 +68,22 @@ t.rt(30)やt.fd(60)がタートルに指示する命令です．
 `down()`
 : タートルがペンを下げる(軌跡がかかれるようになる)．
 
-<!-- color([色の指定])
-ペンの色を変える (1) -->
+`color([色の指定])`
+: タートルがペンの色を変える．（色の指定には'red'や,'blue'などを入れてください）
 
 ### 命令の区切り
+Javascriptのプログラムでは命令と命令の区切りに「;」（セミコロン）を入れます．セミコロンが入っていれば，複数の命令を次のように同じ行に書いてもＯＫです．
+```
+t.fd(100); t.rt(90);
+```
+Javascriptのプログラムでは，セミコロンを書かなくても，異なる行に記述すれば，異なる命令として扱われます．
+```
+t.fd(100) 
+t.rt(90)
+```
 
 ### コメント
-
-コメントはプログラム（命令）としては考慮されず，読み飛ばされます． しかし，人間が読めないとメンテナンスにこまるためにコメントをつけておきます．ファイルの先頭には，プログラムのタイトル，名前や日付を忘れずに．
+コメントはプログラム（命令）としては考慮されず，読み飛ばされます． しかし，人間が読めないとメンテナンスにこまるためにコメントをつけておきます．ファイルの先頭には，プログラムのタイトル，開発者の氏名や日付を入れておきます．
 
 範囲指定コメント
 : `/*`から`*/`までコメントになります
@@ -74,10 +91,9 @@ t.rt(30)やt.fd(60)がタートルに指示する命令です．
 行コメント
 : `//`から先行の終わりまでコメントになります
 
-
 ## プログラムミスと対処
-### コンパイルエラー
-プログラムの書きかたを間違えると，コンパイルしたときにエラーになります．
+### 構文エラー
+プログラムの書きかたを間違えると，実行した時に構文エラーになります．
 
 <!-- 例えば，コマンドの区切りでセミコロンを忘れると，次のようなエラーがでます．
 
@@ -85,7 +101,7 @@ t.rt(30)やt.fd(60)がタートルに指示する命令です．
 >javac House.java House.java:13: ';' がありません． rt(120)
 ^ エラー 1 個 > -->
 				
-コンパイルエラーがでたら，実行することはできないので，ソースを直して，再コンパイルするしかありません． どうしても原因が分からない時は，ＴＡなどに相談してください．
+構文エラーがでたら，実行することはできないので，ソースを直して，再コンパイルするしかありません． どうしても原因が分からない時は，ＴＡなどに相談してください．
 
 ### バグ
 コンパイルが正常に通っても，プログラムが間違っていて，意図した通りに動作しないことをバグといいます． コンピュータは，必ず 命令した通りに動作します．
