--- a/text/02-変数.md
+++ b/text/02-変数.md
@@ -8,8 +8,6 @@
 
 ## 変数
 今回新しく"変数"が登場します．家の大きさを変更できる次のプログラムをみてみましょう．
-
-### 変数と値
 次のプログラムを見てみましょう．
 
 ```{#lst:2-1 .javascript .numberLines caption="家を書くサンプルプログラム"}
@@ -38,7 +36,12 @@ x = 50; // 変数xに値50を代入する
     t.fd(x);
 }
 ```
+### ブロック
+「屋根を書く」，「本体を書く」のように，中括弧で囲まれた部分をブロックと呼びます．プログラムは複数のブロックから構成されます．ブロックの中にブロックを入れる（入れ子にする）ことも出来ます．
 
+上記のプログラムの２つのブロックは，空ブロックといって，プログラムとしては必要はないのですが（実際に取り払ってもプログラムは動きます），人間がプログラムのまとまりを把握しやすいようにブロックを記述しています．カッコの対応があっていないと，構文エラーになりますので注意してください．
+
+### 変数と値
 変数はデータを格納しておく場所のことです． プログラムでは，「メモリ」の許す限り，データを格納しておくことが出来ます．
 
 格納する場所を一つにつき，一つの名前をつけることが出来ます．
@@ -52,8 +55,10 @@ x = 50; // 変数xに値50を代入する
 
 1. 変数の宣言
 <br>![変数の宣言](img/chapter02/table_model_x_01.gif)
+
 1. 変数へ値を代入する
 <br>![変数へ値を代入する](img/chapter02/table_model_x_02.gif)
+
 1. 変数を評価して値にする
 <br>![変数を評価して値にする](img/chapter02/table_model_x_03.gif)
 
@@ -98,14 +103,18 @@ rightAngle = 90;// 直角を90度に設定する
 
 1. 変数の宣言
 <br>![](img/chapter02/table_model_name_01.gif)
+
 1. 変数の宣言
 <br>![](img/chapter02/table_model_name_02.gif)
+
 1. 変数への値の代入
 <br>![](img/chapter02/table_model_name_03.gif)
+
 1. 変数への値の代入
 <br>![](img/chapter02/table_model_name_04.gif)
+
 1. 変数を評価して値にする
-![](img/chapter02/table_model_name_05.gif)
+<br>![](img/chapter02/table_model_name_05.gif)
 
 ## コンピュータに計算をさせる
 ### 計算式を使ったプログラム
@@ -248,7 +257,7 @@ length = input();// 1辺の長さを入力値に設定する
 			
 命令を使います．
 
-出したいメッセージを「"」（ダブルクォーテーション）「"」（ダブルクォーテーション）で囲んでください．
+出したいメッセージを`"`（ダブルクォーテーション）または，`'` （シングルクォーテーション）で囲んでください．
 
 ## 乱数
 ### 命令ごとに毎回変わる値
