--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -15,18 +15,13 @@
 var t = createTurtle();
 
 { // 窓を描く
-  var j = 1;
-  while (j <= 4) {
-  { // 四角形を描く
-    var i = 1;
-    while (i <= 4) {
+  for (var j = 1; j <= 4; j++) { 
+    for (var i = 1; i <= 4; i++) {// 四角形を描く
       t.fd(50);
       t.rt(90);
-      i++;
     }
+    t.rt(90);
   }
-  t.rt(90);
-  j++;
 }
 ```
 
@@ -57,7 +52,7 @@ var t = createTurtle();
 
 ![インデント](img/chapter05/indent.gif)
 
-論プロエディタでは，フォーマットをするとよいです．
+PikePlace環境では，[Ctrl-s](Ctrlキーを押しながらsキーを押す)で，フォーマットをするとよいです．
 
 ## 入れ子と並列の違いの考察：花を描くプログラム
 入れ子の応用として，花を描くプログラムを考えてみましょう．
@@ -73,27 +68,18 @@ var t = createTurtle();
 ```{#lst:4-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-{// 花びらを描く
-  {// 円弧を描く
-    var i = 1;
-    while (i <= 120) {
-      t.rt(1);
-      t.fd(1);
-      i++;
-    }
+{ // 花びらを描く
+  for (var i = 1; i <= 120; i++) { // 円弧を描く
+    t.rt(1);
+    t.fd(1);
   }
-  
-  {// 次の円弧の角度へ
-    t.rt(60);
-  }
-  
-  {// 円弧を描く
-    var i = 1;
-    while (i <= 120) {
-      t.rt(1);
-      t.fd(1);
-      i++;
-    }
+
+  // 次の円弧の角度へ
+  t.rt(60);
+
+  for (var i = 1; i <= 120; i++) { // 円弧を描く
+    t.rt(1);
+    t.fd(1);
   }
 }
 ```
@@ -105,33 +91,22 @@ var t = createTurtle();
 ```{#lst:4-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-{// 花をかく（6枚の花びらを書く）
-  var j = 1;
-  while (j <= 6) {
-    {// 花びらを描く
-      {// 円弧を描く
-        var i = 1;
-        while (i <= 120) {
-          t.rt(1);
-          t.fd(1);
-          i++;
-        }
+{ // 花をかく（6枚の花びらを書く）
+  for (var j = 1; j <= 6; j++) {
+    { // 花びらを描く
+      for (var i = 1; i <= 120; i++) { // 円弧を描く
+        t.rt(1);
+        t.fd(1);
       }
-    
-      {// 次の円弧の角度へ
-        t.rt(60);
-      }
-    
-      {// 円弧を描く
-        var i = 1;
-        while (i <= 120) {
-          t.rt(1);
-          t.fd(1);
-          i++;
-        }
+
+      // 次の円弧の角度へ
+      t.rt(60);
+
+      for (var i = 1; i <= 120; i++) { // 円弧を描く
+        t.rt(1);
+        t.fd(1);
       }
     }
-    j++;
   }
 }
 ```
@@ -145,7 +120,29 @@ var t = createTurtle();
 
 <!-- リスト 6.3.3.1 BadFlower.java -->
 ```{#lst:4-1 .javascript .numberLines caption="House"}
+var t = createTurtle();
 
+{ // 花をかく（6枚の花びらを書く）
+  for (var j = 1; j <= 6; j++) {
+    t.rt(1);
+    t.fd(1);
+  }
+}
+
+{ // 花びらを描く
+  for (var i = 1; i <= 120; i++) { // 円弧を描く
+    t.rt(1);
+    t.fd(1);
+  }
+
+  // 次の円弧の角度へ
+  t.rt(60);
+
+  for (var i = 1; i <= 120; i++) { // 円弧を描く
+    t.rt(1);
+    t.fd(1);
+  }
+}
 ```
 
 これがうまくいかない理由が説明できるでしょうか？ 以下に，このプログラムの構造を示しますので， うまくいく方と比較してみましょう．
@@ -162,18 +159,15 @@ var t = createTurtle();
 ```{#lst:4-1 .javascript .numberLines caption="MultiCircle"}
 var t = createTurtle();
 
-{ // （円を）10個描く
-  var j = 1;
-  while (j <= 10) {
-    { // 円を描く
-      var i = 1;
-      while (i <= 360) {
-        t.fd(1);
-        t.rt(j);
-        i = i + j;
-      }
+for (var j = 1; j <= 10; j++) { // （円を）10個描く
+
+  { // 円を描く
+    var i = 1;
+    while (i <= 360) {
+      t.fd(1);
+      t.rt(j);
+      i = i + j;
     }
-    j = j + 1;
   }
 }
 ```
@@ -188,43 +182,28 @@ var t = createTurtle();
 <!-- リスト 6.4.2.1 SquareAndTriangle.java -->
 ```{#lst:4-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
-var length = 50;// １辺の長さ
+var length = 50; // １辺の長さ
 
-{// 図形を描く　（8回繰り返す）
-  var i = 1;
-  while (i <= 8) {
+for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
 
-    if (i % 2 == 0) {// 偶数なら
-      {// 四角形を書く
-        var j = 1;
-        while (j <= 4) {
-          t.fd(length);
-          t.lt(90);
-
-          j++;// jを1増やす([j = j + 1] の省略形)
-        }
-      }
-    } else {// 奇数なら
-      {// 三角形を書く
-        var j = 1;
-        while (j <= 3) {
-          t.fd(length);
-          t.lt(120);
-
-          j++;// jを1増やす([j = j + 1] の省略形)
-        }
-      }
-    }
-
-    {// 次の図形を書く位置に移動する
-      t.up();
-      t.rt(135);
+  if (i % 2 == 0) { // 偶数なら
+    for (var j = 1; j <= 4; j++) { // 四角形を書く
       t.fd(length);
-      t.rt(180);
-      t.down();
+      t.lt(90);
     }
-  
-    i++;// jを1増やす([i = i + 1] の省略形)
+  } else { // 奇数なら
+    for (var j = 1; j <= 3; j++) { // 三角形を書く
+      t.fd(length);
+      t.lt(120);
+    }
+  }
+
+  { // 次の図形を書く位置に移動する
+    t.up();
+    t.rt(135);
+    t.fd(length);
+    t.rt(180);
+    t.down();
   }
 }
 ```
