--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -38,26 +38,17 @@ function drawRectangle() {
 
 関数は一度定義すれば，同じ関数を何度も呼び出して使うことができます．
 
-このプログラムでは21行目で関数を定義し，17行目で呼び出しています．
-
-```					
-21: function drawRectangle(){
-22: 	for (int i = 0; i < 4;i++) {
-23: 		fd(50);
-24: 		rt(90);
-25: 	}
-26: }
-```
-				
-17: drawRectangle();
+このプログラムでは5行目から10行目で関数を定義し，2行目でそれを呼び出しています．
 				
 引数．戻り値なしの関数定義，関数呼び出しの一般形は以下の通りです
 
 ```
-void [関数名](){
+function [関数名](){
 
 }
-				
+```
+
+```				
 [関数名]();
 ```
 
@@ -182,7 +173,9 @@ function drawRectangle(size) {
 function [関数名]([仮引数名]){
 
 }
-				
+```
+
+```				
 [関数名]([実引数]);
 ```
 
@@ -294,7 +287,7 @@ function drawRectangle(length) {
 }
 ```
 
-```					
+<!-- ```					
 29: void drawRectangle(int length){
 30: 	for (int i =0; i < 4; i++) {
 31: 		fd(length);
@@ -305,7 +298,7 @@ function drawRectangle(length) {
 
 ```					
 24: drawRectangle(inputLength);//入力された長さを一辺の長さとして四角形を描く
-```	
+```	 -->
 				
 ## 関数の設計．あるいはプログラムの構造化
 関数から関数を呼ぶことが出来るため，関数の連鎖を用いてプログラムを作ることができます． これは「構造化プログラミング」という，複雑さを制御するための基本的設計技法です．
@@ -389,14 +382,14 @@ function moveTurtle(direction, distance) {
 ## ライブラリ{.unnumbered}
 実は今まで使っていたfd，rtという命令は，以下のような関数として定義されていたのでした．
 
-- `function fd(int length){...省略...}`
-- `function rt(int angle){...省略...}`
+- `function fd(length){...省略...}`
+- `function rt(angle){...省略...}`
 
 ある目的のために使う関数の集まりを作り，関数群を再利用します． この関数の集まりのことを「ライブラリ」といいます． fd, rtなどのタートルに使う命令は「タートルライブラリ」としてどこかに定義されているのです．
 
 ## 練習問題
 ### 円を描く関数を作ろう
-円を描く関数「void drawCircle()」を作ってください． できたら，start関数から2回以上呼び出して，うまく動作するか確かめてみよう．
+円を描く関数「function drawCircle()」を作ってください． できたら，start関数から2回以上呼び出して，うまく動作するか確かめてみよう．
 
 ファイル名は「circle2.js」とすること．
 
