--- a/text/07-再帰.md
+++ b/text/07-再帰.md
@@ -98,6 +98,8 @@ function makeIndent(indentCount) {
         print("\t");
     }
 }
+```
+
 ```					
 factorial(5, 0)
 	factorial(4, 1)
@@ -403,7 +405,7 @@ drawY(50, 0)
 ### スーパースターを描いてみよう
 関数の再帰呼出しを応用して，下記の図を書いてみましょう．
 
-![superstar](img/chapter07/q.superstar.jpg)
+![superstar](img/chapter07/q_superstar.jpg)
 
 ファイル名は「superstar.js」とすること．
 
