画像の刷新を含む大掛かりな修正，Javascriptバージョンに（フローチャートは未着手）

--- a/text/01-イントロ.md
+++ b/text/01-イントロ.md
@@ -86,10 +86,10 @@ t.rt(90)
 コメントはプログラム（命令）としては考慮されず，読み飛ばされます． しかし，人間が読めないとメンテナンスにこまるためにコメントをつけておきます．ファイルの先頭には，プログラムのタイトル，開発者の氏名や日付を入れておきます．
 
 範囲指定コメント
-: `/*`から`*/`までコメントになります
+: `/*`から`*/`までコメントになります．
 
 行コメント
-: `//`から先行の終わりまでコメントになります
+: `//`から先，行の終わりまでコメントになります．
 
 ## プログラムミスと対処
 ### 構文エラー
@@ -101,14 +101,14 @@ t.rt(90)
 >javac House.java House.java:13: ';' がありません． rt(120)
 ^ エラー 1 個 > -->
 				
-構文エラーがでたら，実行することはできないので，ソースを直して，再コンパイルするしかありません． どうしても原因が分からない時は，ＴＡなどに相談してください．
+構文エラーがでたら，実行することはできないので，ソースを直して，再実行するしかありません．どうしても原因が分からない時は，ＴＡなどに相談してください．
 
 ### バグ
-コンパイルが正常に通っても，プログラムが間違っていて，意図した通りに動作しないことをバグといいます． コンピュータは，必ず 命令した通りに動作します．
+構文があっていても，プログラムが間違っていて，意図した通りに動作しないことをバグといいます． コンピュータは，必ず 命令した通りに動作します．
 
 バグがあったら，修正しましょう．バグを修正することをデバッグといいます．
 
-プロでも，最初から意図したプログラムを書くのは難しいものです． プログラム上達の早道は，一発で動かそうとせずに， 早くバグを見つけて，修正できるようになるようになるように心がけることです．
+プロでも，最初から意図したプログラムを書くのは難しいものです． プログラム上達の早道は，一回で動かそうとせずに， 早くバグを見つけて，修正できるようになるようになるように心がけることです．
 
 ## 練習問題
 ### 正五角形描こう
