--- a/text/03-条件分岐.md
+++ b/text/03-条件分岐.md
@@ -109,10 +109,14 @@ if( [条件式] ) {
 条件式の評価の過程を見ていきましょう．
 
 1. 成立(true)する場合
-<br>![](img/chapter03/condition_true.gif)
+<div class="CJPicture">
+<br>![](img/chapter03/condition_true.png)
+</div>
 
 1. 不成立(false)する場合
-<br>![](img/chapter03/condition_false.gif)
+<div class="CJPicture">
+<br>![](img/chapter03/condition_false.png)
+</div>
 
 1. 注意すること
 注意することは，条件式で，同じかどうか調べるには「==」(イコールを2つ)にしなければならないことです．
@@ -359,9 +363,9 @@ var rohrer; // ローレル指数
 |==	|A==B	|AとBが同じ値の時成立(true)|
 |!=	|A!=B	|AとBが同じ値でない時成立(true)|
 |>	|A>B	|AがBより大きい時成立(true)|
-|<	|A<B	|AがBより小さい時成立(true)|
+|\<	|A\<B	|AがBより小さい時成立(true)|
 |>=	|A>=B	|AがB以上の時成立(true)|
-|<=	|A<=B	|AがB以下の時成立(true)|
+|\<=	|A\<=B	|AがB以下の時成立(true)|
 
 ### 論理演算子
 次のプログラムを見てみましょう．
@@ -410,16 +414,20 @@ var rohrer; // ローレル指数
 |演算子	|表記例	|意味
 |:---:|:---:|---:|
 |`&&`	|A&&B	|AとB両方ともtrueの時true
-|`||`	|A||B	|AもしくはBがtrueの時true
+|`||`	|A\|\|B	|AもしくはBがtrueの時true
 
 #### 論理演算子の評価の過程
 論理演算子の評価の過程を見ていきましょう．
 
 1. And演算子が成立(true)する場合
-<br>![](img/chapter03/condition_logic_and_true.gif)
+<div class="CJPicture">
+<br>![](img/chapter03/condition_logic_and_true.png)
+</div>
 
 1. And演算子が不成立(false)する場合
-<br>![](img/chapter03/condition_logic_and_false.gif)
+<div class="CJPicture">
+<br>![](img/chapter03/condition_logic_and_false.png)
+</div>
 
 ## 変数のスコープ（有効範囲）
 変数には有効範囲（スコープといいます）があります．Javascriptでは基本的に，宣言した変数のブロック内(「{}」で囲まれた範囲)がスコープになります．
@@ -466,7 +474,7 @@ if( [条件式] ) {
 ファイル名は「omikuji.js」とすること．
 
 ### 評点グレード変換プログラムを作ろう
-入力と条件分岐を使って，「秀」「優」「良」「可」「不可」を表示するプログラムを作りましょう． ユーザが評点を入力すると，それに応じたグレードが表示されるようにプログラムを書いてください． 評点区分とグレードの定義は静大の評価制度を利用すること．
+入力と条件分岐を使って，「秀」「優」「良」「可」「不可」を表示するプログラムを作りましょう． ユーザが評点を入力すると，それに応じたグレードが表示されるようにプログラムを書いてください． 評点区分とグレードの定義は大学の評価制度を利用すること．
 
 ファイル名は「grade.js」とすること．
 
