--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -38,7 +38,9 @@ var t = createTurtle();
 
 下図のように，プログラムのifブロックやwhileブロックはいくつでも入れ子にすることができます．
 
-![ブロックの入れ子](img/chapter05/blocknest.gif)
+<div class="CJPicture">
+![ブロックの入れ子](img/chapter05/blocknest.png)
+</div>
 
 ### コンパイルエラーに注意{.nunumbered}
 ブロックを示す中括弧は必ず対応していなくてはなりません． 開き括弧が余ったり，閉じ括弧が余ったりすると，コンパイルエラーとなります．
@@ -50,7 +52,9 @@ var t = createTurtle();
 
 見やすいだけでなく，これができていないためにコンパイルエラーで動かない場合が非常に多いので， 注意してください．
 
-![インデント](img/chapter05/indent.gif)
+<div class="CJPictureS">
+![インデント](img/chapter05/indent.png)
+</div>
 
 PikePlace環境では，[Ctrl-s](Ctrlキーを押しながらsキーを押す)で，フォーマットをするとよいです．
 
@@ -113,7 +117,9 @@ var t = createTurtle();
  
 ポイントは，花びらを書くループの外側にそれを6回繰り返すループをつくる （つまりループを入れ子にする）ことです． 「繰り返しを繰り返す」ためには，繰り返す繰り返しの外側に繰り返しループ を書く必要がありました．構造は以下のようになります．
 
-![花を書くプログラムの構造](img/chapter05/flowerblock.gif)
+<div class="CJPicture">
+![花を書くプログラムの構造](img/chapter05/flowerblock.png)
+</div>
 
 ### 花を描く（間違い）
 以下に，よくある間違いの例を示します．
@@ -147,7 +153,9 @@ var t = createTurtle();
 
 これがうまくいかない理由が説明できるでしょうか？ 以下に，このプログラムの構造を示しますので， うまくいく方と比較してみましょう．
 
-![うまくいかない花を書くプログラムの構造](img/chapter05/flowerblockinvalid.gif)
+<div class="CJPicture">
+![うまくいかない花を書くプログラムの構造](img/chapter05/flowerblockinvalid.png)
+</div>
 
 このように，入れ子を作る時には，｛｝の位置に注意する必要があります．
 
