--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -86,7 +86,9 @@ function move() {
 
 関数が呼び出されると，プログラムの処理はその関数の処理に飛びます． そして，関数が終了すると，関数呼び出し位置に返ってきます．
 
+<div class="CJPictureL">
 ![関数の処理の順序](img/chapter06/functionflow.png)
+</div>
 
 四角形を３つ描くプログラムでは，まず，四角形を描く関数を呼び， 四角形を描き終わったら，次の描く位置まで移動する関数を呼び， 移動し終わったら，再び四角形を描く関数を呼び…という処理を３回繰り返しています．
 
@@ -121,7 +123,9 @@ Javaでは，関数の中に関数を定義することはできません．（ 
 ### 引数を用いた，四角形を描く関数の抽象化
 引数が使えない場合，次のように大きさが違う四角形を書きたい場合も， 2つの関数を作る必要があります．
 
+<div class="CJPicture">
 ![関数の設計](img/chapter06/design1-1.png)
+</div>
 
 リスト 12.3.2.1 DrawTwoRectangles1.js
 ```{#lst:6-1 .javascript .numberLines caption="House"}
@@ -149,7 +153,9 @@ function drawSmallRectangle() {
 
 次のプログラムでは，引数を使って大きさを指定し，大きい四角形と小さな四角形を「四角形を描く」という ひとつの関数で描けるようにしています．
 
+<div class="CJPicture">
 ![関数の設計](img/chapter06/design1-2.png)
+</div>
 
 リスト 12.3.2.2 DrawTwoRectangles2.js
 ```{#lst:6-1 .javascript .numberLines caption="House"}
@@ -181,10 +187,16 @@ function [関数名]([仮引数名]){
 
 呼び出し部分の引数を実引数，宣言部分の引数を仮引数と呼びます．実引数（関数ブロック外にあるデータ）が， 仮引数（関数ブロック内で使える変数）に代入され，関数ブロック内でその変数の値が使えるようになります．
 
+<div class="CJPictureL">
+![実引数と仮引数](img/chapter06/design_argument.png)
+</div>
+
 ### 引数を用いた，多角形を描く関数の抽象化
 家を書くプログラムでは，三角形と四角形を書くために， 2つの関数を作る必要があります．
 
+<div class="CJPicture">
 ![関数の設計](img/chapter06/design2-1.png)
+</div>
 
 <!-- リスト 12.3.3.1 NewHouse1.js -->
 ```{#lst:6-1 .javascript .numberLines caption="House"}
@@ -215,7 +227,9 @@ function drawRectangle(size) {
 
 次のプログラムでは「屋根を描く」処理で使っていた三角形と，「壁を描く」処理で使っていた四角形を 「多角形を描く」というひとつの関数で描けるようにしています．
 
+<div class="CJPicture">
 ![関数の設計](img/chapter06/design2-2.png)
+</div>
 
 <!-- リスト 12.3.3.2 NewHouse2.js -->
 ```{#lst:6-1 .javascript .numberLines caption="House"}
@@ -247,44 +261,51 @@ function drawRegularPolygon(n, size) {
 ### 変数の有効範囲
 次のプログラムは，一辺の長さを指定して四角形を描くプログラムを書こうとして，失敗した例です．
 
-リスト 12.4.1.1 DrawVariableRectangleMethodError.js
+```{#lst:6-1 .javascript .numberLines caption="ScopeError"}
+var t = createTurtle();
 
-大きさを変えて四角形を描くプログラム（コンパイルエラー）を実行しようとすると，以下のようなエラーが出ます
+function start(){
+    var length = input("一辺の長さ？");
+    drawRectangle();
+}
 
+function drawRectangle(){
+    for(var i=0;i<4;i++){
+        t.fd(length);
+        t.rt(90);
+    }
+}
+
+start();
+```
+
+大きさを変えて四角形を描くプログラム（コンパイルエラー）を実行しても，入力した大きさの四角形が描かれず，大きさ0の四角形が描かれます．
 					
-DrawRectangleMethodError.js:31: シンボルを見つけられません．
-シンボル: 変数 length
-場所 : DrawRectangleMethodError の クラス
-					fd(length);
+これは，t.fd(length)のlengthという変数が参照できず，0と置き換えられてしまうための動作です．lengthという変数が参照できないのは，drawRectangle()関数の内部（{と}で囲われた部分）が，lengthという変数の有効範囲外であるためです．
 
-				
-fd(length)のlengthという変数が見つけられないということを意味しています．
-
-これは，drawRectangle()関数の内部（{と}で囲われた部分）が，lengthという変数の有効範囲外であるためです．
-
-![変数の有効範囲](img/chapter06/scope.png)
+<!-- ![変数の有効範囲](img/chapter06/scope.png) -->
 
 ### 引数付関数定義と関数呼び出し
 以下のプログラムは，引数を使って，関数の有効範囲外から四角形の長さを渡せるようにしたプログラムです．
 
 入力された長さのlength（実引数）を，関数にlength（仮引数）として渡し，四角形を描いています．
 
-リスト 12.4.2.1 DrawVariableRectangleMethod.js
 ```{#lst:6-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-// 一辺の長さの入力を受け取る
-var inputLength = input("一辺の長さを入力してください");
+function start(){
+    var length = input("一辺の長さ？");
+    drawRectangle(length);
+}
 
-drawRectangle(inputLength);// 入力された長さを一辺の長さとして四角形を描く
-
-// 四角形を描く
-function drawRectangle(length) {
-    for (var i = 0; i < 4; i++) {
+function drawRectangle(length){
+    for(var i=0;i<4;i++){
         t.fd(length);
         t.rt(90);
     }
 }
+
+start();
 ```
 
 <!-- ```					
@@ -305,7 +326,9 @@ function drawRectangle(length) {
 
 複雑になると，関数の呼び出し関係が混乱してくるので，まず以下のような関数構成図を書き， プログラムを書いていくと良いでしょう．
 
+<div class="CJPictureL">
 ![関数の設計](img/chapter06/design3.png)
+</div>
 
 この設計を実装したものを下に載せます．
 
