--- a/text/04-繰り返し.md
+++ b/text/04-繰り返し.md
@@ -97,16 +97,24 @@ while( [条件式] ) {
 プログラムの実行過程と変数の値の変化を見ていきましょう．
 
 1. 変数の宣言
-![](img/chapter04/table_model_i_01.gif)
+<div class="CJPicture">
+![](img/chapter04/table_model_i_01.png)
+</div>
 
 2. 変数を初期化する(1を代入)
-![](img/chapter04/table_model_i_02.gif)
+<div class="CJPicture">
+![](img/chapter04/table_model_i_02.png)
+</div>
 
 3. 変数を評価して条件を判定する
-![](img/chapter04/table_model_i_03.gif)
+<div class="CJPicture">
+![](img/chapter04/table_model_i_03.png)
+</div>
 
 4. 変数に1を加える
-![](img/chapter04/table_model_i_04.gif)
+<div class="CJPicture">
+![](img/chapter04/table_model_i_04.png)
+</div>
 
 変数が，5になったときに条件式が不成立(false)になるので，繰り返しが終ります． これで4回繰り返されるのが分かるでしょうか？
 
