2週目用に訂正，加筆

--- a/text/03-条件分岐.md
+++ b/text/03-条件分岐.md
@@ -468,13 +468,17 @@ if( [条件式] ) {
 
 ファイル名は「figureshop.js」とすること．
 
-### おみくじプログラムを作ろう
-乱数と条件分岐を使って，「大吉」「中吉」「小吉」「凶」を表示するプログラムを作りましょう． 大吉のときだけ，タートルの絵（星など）を描くようにしましょう．
-
-ファイル名は「omikuji.js」とすること．
-
 ### 評点グレード変換プログラムを作ろう
-入力と条件分岐を使って，「秀」「優」「良」「可」「不可」を表示するプログラムを作りましょう． ユーザが評点を入力すると，それに応じたグレードが表示されるようにプログラムを書いてください． 評点区分とグレードの定義は大学の評価制度を利用すること．
+入力と条件分岐を使って，「秀」「優」「良」「可」「不可」を表示するプログラムを作りましょう． ユーザが評点を入力すると，それに応じたグレードが表示されるようにプログラムを書いてください．ただし，90点以上が秀，80点以上が優，70点以上が良，60点以上が可，それ以外は不可とする．
 
 ファイル名は「grade.js」とすること．
 
+### おみくじプログラムを作ろう
+乱数と条件分岐を使って，「大吉」「中吉」「小吉」「凶」を表示するプログラムを作りましょう．結果は大吉20%, 中吉30%, 小吉30%, 凶20%の確率で出るようにしてください．
+
+ファイル名は「omikuji.js」とすること．
+
+### 入力ー処理ー出力（条件付き）のプログラム
+評点グレード変換プログラムのように，なにかシンプルな条件分岐を伴う処理をする入力ー処理ー出力の形のプログラムを作ってください．
+
+ファイル名は「simpleio2.js」とすること．
